modify incorrect characters in values.yml

--- a/values.yaml
+++ b/values.yaml
@@ -51,7 +51,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: '${storageClass}'
+  storageClass: ${storageClass}
   size: 1Gi
 
 resources:
