--- a/values.yaml
+++ b/values.yaml
@@ -7,21 +7,20 @@ image:
   pullPolicy: Always
 
 imagePullSecrets: []
-nameOverride: ${environment}'-mosquitto'
-fullnameOverride: ${environment}'-mosquitto'
-
+nameOverride: '${environment}-mosquitto'
+fullnameOverride: '${environment}-mosquitto'
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ${serviceAcctName}
+  name: '${serviceAcctName}'
 
 service:
   type: ClusterIP
   externalTrafficPolicy: Cluster
   metadata:
-    name: ${serviceName}
+    name: '${serviceName}'
 
   annotations:
     {}
@@ -51,7 +50,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: ${storageClass}
+  storageClass: '${storageClass}'
   size: 1Gi
 
 resources:
