--- a/values.yaml
+++ b/values.yaml
@@ -7,21 +7,19 @@ image:
   pullPolicy: Always
 
 imagePullSecrets: []
-nameOverride: '${environment}-mosquitto'
-fullnameOverride: '${environment}-mosquitto'
+nameOverride: ''
+fullnameOverride: ''
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: '${serviceAcctName}'
+  name:
 
 service:
   type: ClusterIP
   externalTrafficPolicy: Cluster
-  metadata:
-    name: '${serviceName}'
-
   annotations:
     {}
     # metallb.universe.tf/allow-shared-ip: pi-hole
@@ -34,13 +32,12 @@ ports:
     protocol: TCP
   websocket:
     port: 9090
-    # nodePort: 39090
     protocol: TCP
 
 persistence:
   enabled: true
   accessMode: ReadWriteOnce
-  # existingClaim: ''
+  existingClaim: ''
   mountPath: /mosquitto/data
   subPath: ''
   ## database data Persistent Volume Storage Class
@@ -50,7 +47,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: '${storageClass}'
+  # storageClass: "-"
   size: 1Gi
 
 resources:
