--- a/values.yaml
+++ b/values.yaml
@@ -18,7 +18,7 @@ serviceAccount:
   name:
 
 service:
-  type: ClusterIP
+  type: NodePort
   externalTrafficPolicy: Cluster
   annotations:
     {}
